# PGF-Plataforma-De-Gesti-n-Flota-Pepsico-

./: $null  .coveragerc  .env.example  .gitignore  ANALISIS_PROYECTO.md  API_ENDPOINTS_REFERENCE.md  COMENTARIOS_PENDIENTES.md  Dockerfile  GITHUB_SETUP.md  OWASP_ZAP_GUIDE.md  PGF_Insomnia.json  PLAN_PRUEBAS.md  POSTMAN_COLLECTION.json  PRUEBAS_MANUALES.md  QUICK_START_TESTING.md  README.md  RESUMEN_IMPLEMENTACION.md  SETUP.md  TESTING.md  TESTING_PLAN.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  conftest.py  cors.json  docker-compose.yml  manage.py  package-lock.json  package.json  put_cors.json  pyproject.toml  pytest.ini  run_tests.bat  run_tests.sh
apps/core/: __init__.py  serializers.py  validators.py
apps/drivers/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/emergencies/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/inventory/: __init__.py  admin.py  (+4 more)
docs/: COMANDOS_PYTEST.md  ESQUEMA_SQL_COMPLETO.sql  ESQUEMA_SQL_FROM_DB.sql  GENERAR_ESQUEMA_SQL.md  GUIA_PRUEBAS.md  LIMPIEZA_DATOS.md  MER_DIAGRAMA.dbml  MER_DIAGRAMA.md  MODELO_DATOS.md  REPORTES_PRUEBAS.md  SEED_DATOS.md  TROUBLESHOOTING_ZAP.md
pgf_core/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
postman/: PGF_API_Collection.json  README.md
scripts/: README.md  analyze_test_reports.py  clear_all_data.sh  create_admin_permanent.sh  dump_schema.py  dump_schema.sh  dump_schema_simple.sh  owasp_zap_scan.sh  run_all_tests.sh  run_pytest.sh  run_tests_with_reports.py  seed_data.sh  verify_admin.sh
(+342 files in other folders)
